--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
-    background: blue;
+    background: red;
+}
+h1 {
     color: white;
+    text-transform: uppercase;
     text-align: center;
 }
